Add delete confirmation and mergington.edu email validation

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -26,7 +26,7 @@
         <form id="signup-form">
           <div class="form-group">
             <label for="email">Student Email:</label>
-            <input type="email" id="email" required placeholder="your-email@mergington.edu" />
+            <input type="email" id="email" required placeholder="your-email@mergington.edu" pattern=".*@mergington\.edu$" title="Must use a mergington.edu email address" />
           </div>
           <div class="form-group">
             <label for="activity">Select Activity:</label>
